Closed Bug 416109 Opened 18 years ago Closed 18 years ago

fix compile warnings

Categories

(Core :: Disability Access APIs, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: surkov, Assigned: surkov)

Details

Attachments

(1 file)

Attached patch patchSplinter Review
No description provided.
Attachment #301875 - Flags: review?(aaronleventhal)
Attachment #301875 - Flags: review?(aaronleventhal) → review+
Attachment #301875 - Flags: approval1.9?
Comment on attachment 301875 [details] [diff] [review] patch a1.9+=damons
Attachment #301875 - Flags: approval1.9? → approval1.9+
checked in
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: