Bug 416109 - fix compile warnings, r=aaronlev, a=dsicore